Backport: Disabling Schedule Repair in DC Level (#1282)